tests/baselines/reference/plainJSTypeErrors.errors.txt
plainJSTypeErrors.js(2,5): error TS2839: This condition will always return 'false' since JavaScript compares objects by reference, not value.


==== plainJSTypeErrors.js (1 errors) ====
    // should error
    if ({} === {}) {}
        ~~~~~~~~~
!!! error TS2839: This condition will always return 'false' since JavaScript compares objects by reference, not value.
    
    // should not error
    if ({} == {}) {}
    